Add bootstrap for layout

--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -9,13 +9,15 @@
 	<!-- MATERIAL DESIGN ICONIC FONT -->
 	<link rel="stylesheet" href="/static/welcome/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
-	<link rel="stylesheet" type="text/css" href="/static/login_register/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
 
 	<!-- STYLE CSS -->
 	<link rel="stylesheet" href="/static/welcome/css/style.css">
 </head>
 
 <body>
+
+	
 	<div class="wrapper">
 		<div class="inner">
 			<h3> Hi {{ .name }} </h3>
@@ -23,10 +25,10 @@
 			<p> Technology changes live, mindset changes every things </p>
 			<div class="d-flex justify-content-between">
 				<a href="https://github.com/huykingsofm">
-					<button> Huy's GITHUB </button>
+					<button> huykingsofm </button>
 				</a>
-				<a href="https://github.com/huykingsofm">
-					<button> Tuan's GITHUB </button>
+				<a href="https://github.com/tuanhm11299">
+					<button> tuanhm11299 </button>
 				</a>
 			</div>
 			
@@ -56,4 +58,4 @@
 <script src="/static/login_register/vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
 <script src="/static/login_register/vendor/bootstrap/js/popper.js"></script>
-<script src="/static/login_register/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
