Apply xypriv, add unittest

--- a/web/template/register.html
+++ b/web/template/register.html
@@ -66,6 +66,8 @@
 						</span>
 					</div>
 
+					<input type="hidden" name="role" value="user">
+
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Create Account
