--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -1,61 +1,121 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title> Welcome to xybor space </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<!-- MATERIAL DESIGN ICONIC FONT -->
-	<link rel="stylesheet" href="/static/welcome/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
-
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
-
-	<!-- STYLE CSS -->
-	<link rel="stylesheet" href="/static/welcome/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../static/layout/site.css" />
+    <script src="https://kit.fontawesome.com/35394f46a8.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-
-	
-	<div class="wrapper">
-		<div class="inner">
-			<h3> Hi {{ .name }} </h3>
-			<p> Welcome to xybor space, we are huykingsofm and tuanhm11299 </p>
-			<p> Technology changes live, mindset changes every things </p>
-			<div class="d-flex justify-content-between">
-				<a href="https://github.com/huykingsofm">
-					<button> huykingsofm </button>
-				</a>
-				<a href="https://github.com/tuanhm11299">
-					<button> tuanhm11299 </button>
-				</a>
-			</div>
-			
-			<div class="d-flex justify-content-between">
-				<a href="https://github.com/xybor">
-					<button> XYBOR </button>
-				</a>
-				<a href="https://github.com/xybor-x">
-					<button> XYBOR-X </button>
-				</a>
-			</div>
-
-			<div class="d-flex justify-content-center">
-				<a href="logout?redirect_uri=/">
-					<button> Logout </button>
-				</a>
-			</div>
-			
-		</div>
-	</div>
-
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+    <header class="fixed-top">
+        <nav class="navbar bg-light navbar-expand-sm navbar-toggleable-sm navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="../static/img/logo_black.png" width="99" height="54" alt="logo"/>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item mx-4">
+                            <a class="nav-link text-dark" href="#" title="Home">Home</a>
+                        </li>
+                        <li class="nav-item mx-4">
+                            <a class="nav-link text-dark" href="#" title="About Us">About Us</a>
+                        </li>
+                        <li class="nav-item mx-4">
+                            <a class="nav-link text-dark" href="/register" title="Create Account">Create Account</a>
+                        </li>
+                        <li class="nav-item mx-4">
+                            <a class="nav-link btn btn-md btn-primary rounded-0 text-white px-4" href="logout?redirect_uri=/" title="Logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main role="main" class="d-flex flex-column flex-nowrap position-relative mb-5">
+        <section class="background-overlay mt-5">
+            <div class="background-overlay__image"></div>
+            <div class="container">
+                <h1 class="text-center fw-bold fs-1">Welcome to Xybor space</h2>
+                <div class="mt-5 mb-5">
+                    <p class="text-center">
+                        We are the team who have passion with technology and want to change the lives better.
+                    </p>
+                    <p class="text-center">
+                        Technology changes live, mindset changes every things.
+                    </p>
+                </div>
+                <p class="fw-medium fs-3 text-center">
+                   Find out more about us on github
+                </p>
+                <div class="d-flex justify-content-evenly flex-column flex-md-row">
+                    <a target="_blank" class="btn btn-lg btn-primary rounded-0 text-white px-4 my-2" href="https://github.com/huykingsofm" rel="noopener">
+                        huykingsofm
+                    </a>
+                    <a target="_blank" class="btn btn-lg btn-primary rounded-0 text-white px-4 my-2" href="https://github.com/tuanhm11299" rel="noopener">
+                        tuanhm11299
+                    </a>
+                    <a target="_blank" class="btn btn-lg btn-primary rounded-0 text-white px-4 my-2" href="https://github.com/sangvhh" rel="noopener">
+                        sangvhh
+                    </a>
+                </div>
+                <p class="fw-medium fs-3 text-center mt-5">
+                    Our organization
+                 </p>
+                <div class="d-flex justify-content-evenly flex-column flex-md-row">
+                    <a target="_blank" class="btn btn-lg btn-primary rounded-0 text-white px-4 my-2" href="https://github.com/xybor" rel="noopener">
+                        xybor
+                    </a>
+                    <a target="_blank" class="btn btn-lg btn-primary rounded-0 text-white px-4 my-2" href="https://github.com/xybor-x" rel="noopener">
+                        xybor-x
+                    </a>
+                    
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="d-flex align-items-center footer text-white bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-sm-12 text-center text-md-start">
+                    <small>
+                        <span>
+                            &copy;
+                            <script>
+                                var CurrentYear = new Date().getFullYear();
+                                document.write(CurrentYear);
+                            </script>
+                            - Xybor. All Rights Reserved.
+                        </span>
+                    </small>
+                    <br />
+                    <small>
+                        <div>Follow us on:</div>
+                        <a target="_blank" class="text-white" href="https://github.com/xybor" title="github" rel="noopener"><i class="fab fa-github fa-2x"></i></a>
+                    </small>
+                </div>
+                <div class="col-md-6 col-sm-12 col-sm-12 text-center text-md-end">
+                    <small>
+                        <a target="_blank"
+                           class="text-white text-decoration-none"
+                           href="#">Privacy Policy</a>
+                        |
+                        <a target="_blank" class="text-white text-decoration-none" href="#">Terms & Conditions</a>
+                    </small>
+                    <br />
+                    <img src="../static/img/logo_white.png" width="99" height="54" alt="logo"/>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </html>
-
-<!--===============================================================================================-->
-<script src="/static/login_register/vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-<script src="/static/login_register/vendor/bootstrap/js/popper.js"></script>
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
