--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../static/layout/site.css" />
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/layout/site.css" />
     <script src="https://kit.fontawesome.com/35394f46a8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="fixed-top">
         <nav class="navbar bg-light navbar-expand-sm navbar-toggleable-sm navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="../static/img/logo_black.png" width="99" height="54" alt="logo"/>
+                <a class="navbar-brand" href="/">
+                    <img src="/static/img/logo_black.png" width="99" height="54" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -23,10 +23,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="#" title="Home">Home</a>
+                            <a class="nav-link text-dark" href="/" title="Home">Home</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="#" title="About Us">About Us</a>
+                            <a class="nav-link text-dark" href="/profile" title="User">User</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link text-dark" href="/register" title="Create Account">Create Account</a>
@@ -110,7 +110,7 @@
                         <a target="_blank" class="text-white text-decoration-none" href="#">Terms & Conditions</a>
                     </small>
                     <br />
-                    <img src="../static/img/logo_white.png" width="99" height="54" alt="logo"/>
+                    <img src="/static/img/logo_white.png" width="99" height="54" alt="logo"/>
                 </div>
             </div>
         </div>
