Implement layout user page

--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -23,10 +23,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="#" title="Home">Home</a>
+                            <a class="nav-link text-dark" href="/welcome" title="Home">Home</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="#" title="About Us">About Us</a>
+                            <a class="nav-link text-dark" href="/userPage" title="User">User</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link text-dark" href="/register" title="Create Account">Create Account</a>
