--- a/web/template/profile.html
+++ b/web/template/profile.html
@@ -15,7 +15,7 @@
         <nav class="navbar bg-light navbar-expand-sm navbar-toggleable-sm navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="/welcome">
-                    <img src="../static/logo_black.png" width="99" height="54" alt="logo"/>
+                    <img src="../static/img/logo_black.png" width="99" height="54" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu-bar, #sidebarMenu" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
                                             <input id="address" class="form-control font-weight-light" placeholder="Address" autocomplete="off" />
                                             <span class="text-danger font-weight-light"></span>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-lg btn-outline-primary text-white w-100">Submit</button>
+                                        <button type="submit" class="btn btn-primary btn-lg btn-outline-primary text-white w-100">Update</button>
                                     </form>  
                             </div>
                             <div class="col-md-2">
@@ -139,7 +139,7 @@
                         <a target="_blank" class="text-white text-decoration-none" href="#">Terms & Conditions</a>
                     </small>
                     <br />
-                    <img src="../static/logo_white.png" width="99" height="54" alt="logo"/>
+                    <img src="../static/img/logo_white.png" width="99" height="54" alt="logo"/>
                 </div>
             </div>
         </div>
