--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" href="/welcome" title="Home">Home</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/userPage" title="User">User</a>
+                            <a class="nav-link text-dark" href="/profile" title="User">User</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link text-dark" href="/register" title="Create Account">Create Account</a>
