--- a/web/template/register.html
+++ b/web/template/register.html
@@ -66,7 +66,7 @@
 						</span>
 					</div>
 
-					<input type="hidden" name="role" value="user">
+					<input type="hidden" name="role" value="member">
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
