--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -26,13 +26,13 @@
                             <a class="nav-link text-dark" href="/" title="Home">Home</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/profile" title="User">User</a>
+                            <a class="nav-link text-dark" href="/profile" title="Profile">Profile</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/register" title="Create Account">Create Account</a>
+                            <a class="nav-link text-dark" href="/register" title="Register">Register</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link btn btn-md btn-primary rounded-0 text-white px-4" href="logout?redirect_uri=/" title="Logout">Logout</a>
+                            <a class="nav-link btn btn-md btn-primary rounded-0 text-white px-4" href="/logout?redirect_uri=/" title="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
