--- a/web/template/welcome.html
+++ b/web/template/welcome.html
@@ -6,44 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/static/layout/site.css" />
+    <link rel="stylesheet" href="/static/layout/css/layout.css" />
     <script src="https://kit.fontawesome.com/35394f46a8.js" crossorigin="anonymous"></script>
+    <script type="module" src="/static/layout/js/layout.js"></script>
 </head>
 <body>
-    <header class="fixed-top">
-        <nav class="navbar bg-light navbar-expand-sm navbar-toggleable-sm navbar-light">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img src="/static/img/logo_black.png" width="99" height="54" alt="logo"/>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                    <ul class="navbar-nav">
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/" title="Home">Home</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/profile" title="Profile">Profile</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="/register" title="Register">Register</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link btn btn-md btn-primary rounded-0 text-white px-4" href="/logout?redirect_uri=/" title="Logout">Logout</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <input type="hidden" id="user-name" value="{{.name}}"/>
+    <header-component></header-component>
     <main role="main" class="d-flex flex-column flex-nowrap position-relative mb-5">
         <section class="background-overlay mt-5">
             <div class="background-overlay__image"></div>
             <div class="container">
-                <h1 class="text-center fw-bold fs-1">Welcome to Xybor space</h2>
+                <h1 class="text-center fw-bold fs-1">Welcome to Xybor space {{ .name }}</h2>
                 <div class="mt-5 mb-5">
                     <p class="text-center">
                         We are the team who have passion with technology and want to change the lives better.
@@ -81,41 +55,7 @@
             </div>
         </section>
     </main>
-    <footer class="d-flex align-items-center footer text-white bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-sm-12 text-center text-md-start">
-                    <small>
-                        <span>
-                            &copy;
-                            <script>
-                                var CurrentYear = new Date().getFullYear();
-                                document.write(CurrentYear);
-                            </script>
-                            - Xybor. All Rights Reserved.
-                        </span>
-                    </small>
-                    <br />
-                    <small>
-                        <div>Follow us on:</div>
-                        <a target="_blank" class="text-white" href="https://github.com/xybor" title="github" rel="noopener"><i class="fab fa-github fa-2x"></i></a>
-                    </small>
-                </div>
-                <div class="col-md-6 col-sm-12 col-sm-12 text-center text-md-end">
-                    <small>
-                        <a target="_blank"
-                           class="text-white text-decoration-none"
-                           href="#">Privacy Policy</a>
-                        |
-                        <a target="_blank" class="text-white text-decoration-none" href="#">Terms & Conditions</a>
-                    </small>
-                    <br />
-                    <img src="/static/img/logo_white.png" width="99" height="54" alt="logo"/>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer-component></footer-component>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
